instructions.Instructions.scala.error
Erreur de compilation :
Instructions:2: error: not found: type int
avance(2:int);
         ^Instructions:6: error: not found: type int
avance(2:int);
         ^