instructions.Instructions.scala.code
baisseBrosse();
avance(2:int);
droite();
avance(2:Int);
droite();
avance(2:int);
droite();
avance(1:Int);
droite();
avance();